improving scripts