@@ -1,14 +1,58 @@
+#!/bin/bash
 PROJECTS="$HOME/projects"
 
-cmd=`printf "create\nrun" | fzf`
+BASE_INITIALIZERS=`echo "java zig node go" | tr ' ' '\n'`
 
-if echo $cmd | grep -qs 'run'; then
-  read -p "command: " command
-  echo $command
-else
-  read -p "folder: " folder
-  dir="$PROJECTS/$folder"
-  mkdir $dir
+initializer=`printf "$BASE_INITIALIZERS" | fzf`
+dir="$(pwd)"
 
-  echo $dir
+function is_initializr {
+  return `echo $initializer | grep -qs $@`
+}
+
+function read_def {
+  default_value="$2"
+  read -p "$1 [$default_value]: " var
+  
+  if [ -z $var ]; then
+    echo $default_value
+  else
+    echo $var
+  fi
+}
+
+if is_initializr 'java'; then
+  groupId=$(read_def "Group ID" "com.example")
+  artifactId=$(read_def "Artifact ID" "demo")
+  archetype=$(read_def "Archetype ID" "maven-archetype-quickstart")
+
+  cd $PROJECTS &&\
+    MAVEN_OPTS="--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow" \
+    mvn archetype:generate \
+    -DgroupId=$groupId \
+    -DartifactId=$artifactId \
+    -DarchetypeArtifactId=$archetype \
+    -DinteractiveMode=false;
+
+  dir="$PROJECTS/$artifactId"
+elif is_initializr 'zig'; then
+  read -p "Project name: " project
+  dir="$PROJECTS/$project"
+
+  mkdir $dir && cd $dir && zig init
+elif is_initializr 'node'; then
+  read -p "Project name: " project
+  read -p "Version (lts/jod): " version
+  dir="$PROJECTS/$project"
+  
+  mkdir $dir && cd $dir && npm init -y && echo "$version" > .nvmrc
+elif is_initializr 'go'; then
+  read -p "Project name: " project
+  dir="$PROJECTS/$project"
+
+  mkdir $dir && \
+    cd $dir && \
+    go mod init github.com/githiago-f/$project
 fi
+
+cd $dir
